# agentskillpack

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  install.ps1  install.sh
.github/workflows/: ci.yml
demos/: run_all.ps1  run_all.sh
docs/: ARCHITECTURE.md  authoring.md  capabilities.md  ci-verification.md  registry.md  signing.md  skill.schema.json
examples/hello-skill/: SKILL.md  skill.json
examples/hello-skill/scripts/: greet.py
examples/research-skill/: SKILL.md  skill.json
examples/research-skill/scripts/: research.py
examples/research-skill/templates/: report.md.tmpl
src/: lib.rs  main.rs  manifest.rs  registry.rs  resolve.rs  sign.rs
tests/: cli_e2e.rs  roundtrip.rs  schema_sync.rs
